# Value

./: .env.example  .gitignore  PROMPT_VALUE.md  README.md  docker-compose.yml  pyproject.toml
api/: pyproject.toml
api/src/value_api/: __init__.py  main.py  politica.py
api/src/value_api/db/: __init__.py  models.py
api/tests/: test_politica.py
config/: politica_escritorio.yaml
docs/: MANUAL_OPERADOR.md  PERGUNTAS_JURIDICAS.md  VIGILANCIA_NORMATIVA.md
docs/adr/: 0001-arquitetura-em-camadas.md  0002-defeitos-do-paradigma.md  0003-acumulacao-selic-soma-simples.md  0004-aritmetica-do-motor-e-arredondamento.md  0005-cenarios-ec136-motor-nao-escolhe.md  README.md
engine/: pyproject.toml
engine/src/value_engine/: __init__.py  calculo.py  cenarios.py  correcao.py  errors.py  juros.py  models.py  motor.py  prescricao.py  tipos.py
engine/src/value_engine/regime/: __init__.py  cenarios_ec136.yaml  regime_temporal.yaml  temporal.py
engine/src/value_engine/verbas/: __init__.py  base.py  pasep.py
engine/tests/: test_calculo_propriedades.py  test_cenarios_ec136.py  test_no_float.py  test_paradigma.py  test_prescricao.py  test_regime_temporal.py
fixtures/: cjf_ipca_e_paradigma.json  paradigma_pasep_amarante.json
indices/: pyproject.toml
indices/src/value_indices/: __init__.py  acumulacao.py  armazenamento.py  base.py  cli.py  fontes.py
indices/src/value_indices/coletores/: __init__.py  bcb_sgs.py  cjf.py
indices/tests/: test_acumulacao_selic.py  test_armazenamento.py  test_bcb_sgs.py
indices/tests/dados/: sgs_4390_dez2021_jul2026.json
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  tokens.css
