[project]
name = "value-api"
version = "0.0.0"
description = "FastAPI: persistência, autenticação, orquestração. On-premise."
requires-python = ">=3.12"
dependencies = [
    "value-engine",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "jinja2>=3.1",
    "weasyprint>=62",
    "openpyxl>=3.1",
]

[tool.uv.sources]
value-engine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/value_api"]
