[project]
name = "value-engine"
version = "0.0.0"
description = "Motor puro de cálculo de memoriais — sem I/O, sem rede, sem banco, sem relógio."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    # PyYAML só para PARSEAR a tabela-seed de regime temporal (dado, não código).
    # Não é I/O de rede/banco/relógio: leitura determinística de recurso empacotado.
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/value_engine"]
