[project]
name = "value-indices"
version = "0.0.0"
description = "Coletores de séries oficiais — executáveis isolados, gravam append-only com proveniência."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.scripts]
value-coletar = "value_indices.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/value_indices"]
